feat: enhance authentication and user management with improved exception handling and validation